第一次考试答案修改

--- a/2.js/考试/第一次考试0130.md
+++ b/2.js/考试/第一次考试0130.md
@@ -62,7 +62,7 @@
     + ary.sort(function(a,b){
         return a-b;
     })
-+ 5、tr.slice(n,m+1)
++ 5、str.slice(n,m+1)
 ### Math()
 + 1、Math.round(Math.random()*(m-n)+n);
 + 2、Math.max()/Math.min()
@@ -70,7 +70,7 @@
 + 4、true
 + 5、"ok"
 ### 求和未知参数的和
-    ```
+```
     function total(){
         var res=0;
         for(var i=0;i<arguments.length;i++){
@@ -82,9 +82,9 @@
         return res
     }
     total(3,"12","12px")
-    ```
+```
 ### 就既能被 3 又能被 5 除
-    ```
+```
     function total(item){
         var res=0
         for(var i=0;i<item;i++){
@@ -95,8 +95,9 @@
         return res
     }
     total(101)
-    ```
+```
 ### 获取参数
+```
     var str = "http://www.baidu.com?name=lili&age=10";
     function getEle(str) {
         var newObj = {};
@@ -110,6 +111,7 @@
         return newObj
     }
     getEle(str)
+```
 ### 获取验证码
  ```
 <style>
