重新梳理 10-15 天的笔记

--- a/2.js/day10/1.方法-git.md
+++ b/2.js/day10/1.方法-git.md
@@ -1,11 +1,48 @@
-### git 命令
-+ git init:初始化一个 git 仓库
+### git & gitHub 命令
++ 创建一个远程仓库(点击左上角绿色的按钮 New)
+    + Repository name：新建仓库的名称
+    + Description：新建仓库的描述
+    + Public/Private:新建仓库是公开还是私密的
+    + Initialize this repository with:为仓库增加初始化文件(暂时不选)
+    + 绿色按钮 Create repository: 创建新的仓库
++ 本地仓库和远程仓库建立连接
+    + git remote -v(查看本地和远程仓库的连接状态)
+    + git remote add origin 远程仓库地址
+    + git pull origin master (拉取远程仓库的代码到本地)
+    + git push origin master (推送本地的代码到远程仓库)
+    + git clone 远程仓库地址 仓库的名字(如果不写默认原仓库名)（克隆之后就不需要 init）
+
+### git命令
++ git init: 初始化一个 git 仓库
 + git status: 查看状态
 + git add 名字: 工作区提交到暂存区
     + git add .: 所有代码都claer提交到暂存区
     + git diff: 查看工作区
     + git diff --cached: 查看缓存区
-
-+ git commit -m"注释的内容": 从暂存区转到历史区
++ git commit -m"注释的内容": 从暂存区转到历史区（m后面有没有空格都行）
     + git log: 查看历史区信息
-+ git reset
++ git reset: 缓存区回到工作区
++ git reset --soft 参数: 相关代码从历史区回到缓存区
++ git reset --hard 参数: 相关代码从历史区直接删掉
++ git checkout 文件名: 相关代码从工作区删掉
++ git相关全局配置
+    + git config --global --list：查看全局配置信息
+    + git config --global user.name 'xxx'  
+    + git config --global user.email 'xxx@xxx'
+
++ mkdir 文件名: 创建文件夹
++ cd../: 返回上一级
++ cd 文件夹: 进入某个文件夹
++ cd /: 回到根目录
++ :q: 退出
++ :w: 保存
++ :wq: 保存退出
++ :q!: 不保存退出
+
+
+
+
+
+
+
+
